# coserver4

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  configure.ac  coserver4.1  doxygen.conf  log4cxx.properties
cmake/: MetnoGTest.cmake
debian/: changelog  control  rules
include/: CoConsole.h  CoServer2.h  CoServer4.h  CoSocket.h
src/: CMakeLists.txt  CoConsole.cc  CoConsole.h  CoServer2.cc  CoServer4.cc  CoServer4.h  CoSocket.cc  CoSocket.h  Makefile  Makefile.am  main.cc
test/: CMakeLists.txt  Makefile.am  gtestMainQt.cc
