PROJECT(coserver4)
CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(MetnoGTest)
INCLUDE(MetnoUtils)
INCLUDE(MetnoVersions)

METNO_CMAKE_SETUP()

METNO_PVERSION(5.2.1)

SET(CMAKE_AUTOMOC ON)

SET(PKGS
  metlibs-milogger>=6.0.0
  metlibs-coserver-qt5>=3.0.0
  metlibs-qutilities-qt5>=8.0.0
)

PKG_CHECK_MODULES(PC_METLIBS REQUIRED
  ${PKGS}
)

FIND_PACKAGE(Qt5 REQUIRED COMPONENTS
  Network
)

ENABLE_TESTING()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
